<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_main_menu"
            android:icon="@drawable/ic_home"
            android:title="@string/main_menu"/>

        <item
            android:id="@+id/nav_earthquake"
            android:icon="@drawable/icons8_earthquakes_16"
            android:title="@string/earthquake" />
        <item
            android:id="@+id/nav_fire"
            android:icon="@drawable/icons8_fire_30"
            android:title="@string/fire" />
        <item
            android:id="@+id/nav_floods"
            android:icon="@drawable/icons8_floods_48"
            android:title="@string/floods" />
    </group>

</menu>