<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FireFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/for_web_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/goto_afad"
        android:textStyle="italic"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fire_info"
        android:layout_below="@id/for_web_view"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_below="@id/text_view">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fire_info1"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"/>
    </ScrollView>

</RelativeLayout>