<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="false"
    android:layout_alignParentTop="false"
    android:layout_alignParentBottom="false"
    android:layout_alignParentStart="false"
    tools:context=".fragment.MainFragment">

    <!-- TODO: Update blank fragment layout -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/info"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/image_view"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_marginTop="1dp"
                android:contentDescription="@string/i_m_in_safe"
                android:src="@drawable/ic_check" />

            <EditText
                android:id="@+id/add_number"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_country_code"
                android:drawableLeft="@drawable/ic_country_code"
                android:drawableEnd="@drawable/ic_phone"
                android:drawableRight="@drawable/ic_phone"
                android:ems="10"
                android:inputType="phone"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:drawablePadding="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:autofillHints="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:gravity="center">


                <Button
                    android:id="@+id/add"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/add"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/view"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/view"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
      </LinearLayout>
</RelativeLayout>

